[Fix] Animacion diferente, agrego modal, quito valor, diagramacion mobile

--- a/oraculo.css
+++ b/oraculo.css
@@ -55,7 +55,7 @@
 .oracle-response {
   display: flex;
   flex-direction: row;
-  /* border: green 2px solid; */
+  /* border: pink 2px solid; */
   width: 50%;
   padding-right: 8%;
   margin: 8% 0 8% 0;
@@ -74,10 +74,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  font-weight: bold;
+  /* border: green 2px solid; */
+  width: 100%;
 }
 
 .personal-value {
   font-size: 2vw;
+  display: none;
 }
 
 .more-info {
@@ -89,10 +93,16 @@
   /* padding: 5% 0 5% 0; */
 }
 
+.instagram-links-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .instagram {
   text-decoration: none;
   color: white;
   margin-top: 5%;
+  margin-right: 5%;
 }
 
 .instagram:hover {
@@ -103,6 +113,96 @@
   color: #bedcb2;
   text-decoration: none;
   font-weight: bold;
+  margin-right: 5%;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+@keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  padding: 2px 16px;
+  background-color: #f2d5a0;
+  color: white;
+}
+
+.modal-body {
+  background-color: #262626;
+  padding: 2px 16px;
+}
+
+.dark-text {
+  color: #262626;
+}
+
+.modal-footer {
+  padding: 2px 16px;
+  background-color: #f2d5a0;
+  color: white;
 }
 
 @media only screen and (max-width: 769px) {
@@ -141,13 +241,13 @@
   }
 
   .oracle-response {
+    display: flex;
     flex-direction: column;
     width: 90%;
     justify-content: center;
     align-items: center;
     /* padding-right: 8%; */
     /* margin: 8% 0 8% 0; */
-    /* border: black 2px solid; */
   }
 
   .card {
@@ -159,7 +259,24 @@
     font-size: 7vw;
   }
 
-  .more-info {
-    width: 80%;
+  .instagram-links-container {
+    flex-direction: row;
   }
+
+  .actions-container {
+    display: flex;
+    align-self: center;
+    flex-direction: column;
+    margin-top: 5%;
+  }
+
+  .ask-other-question {
+    /* border: white 2px solid; */
+    width: 100%;
+    margin-top: 5%;
+  }
+
+  /* .more-info {
+    width: 80%;
+  } */
 }
